Fixed the buttons alignment on the web page

--- a/Weather.css
+++ b/Weather.css
@@ -24,6 +24,11 @@ h1 {
     background-color: rgb(45, 104, 160);
     width: 700px;
 }
+
+#searchButton {
+    background-color: rgb(105, 228, 56);
+    padding: 7px 15px
+}
     
 form {
     padding: 12px 20px;
@@ -87,15 +92,15 @@ form {
     background-color: #4CAF50;
     border: 2px solid #a8af4c;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 20px;
     text-align: center;
-    text-decoration: none;
+    text-decoration:burlywood;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    cursor: pointer; 
-    border-radius: 50%; 
-    margin-left:1500px;      
+    cursor: pointer;
+    border-radius: 50%;      
+    margin-inline: 5px;    
 }
 
 .box {
